--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,8 @@ tasks:
   - init: . ${GITPOD_REPO_ROOT}/.vscode/init_tasks.sh
     command: /home/gitpod/.pg_ctl/bin/pg_start > /dev/null
   - command: . ${GITPOD_REPO_ROOT}/.vscode/uptime.sh &
+  - init: pip install black
+  - command: black run.py 
 vscode:
   extensions:
     - ms-python.python
@@ -11,4 +13,3 @@ vscode:
     - eventyret.bootstrap-4-cdn-snippet
     - hookyqr.beautify
     - matt-rudge.auto-open-preview-panel
-
